<resources>
    <string name="app_name">MyRecipes</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="time">Time</string>
    <string name="image">Image</string>
    <string name="cancel">Cancel</string>
    <string name="new_recipe_item">New Recipe Item</string>
    <string name="ok">Ok</string>
    <string name="button_text">Button</string>
    <string name="one_page_item">Thir Recipe</string>
    <string name="recipe_name">RecipeName</string>
</resources>
